--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -60,7 +60,7 @@
 {% block fullBody %}
     <body>
     {% block navbar %}
-        <nav class="navbar navbar-expand navbar-dark bg-primary sticky-top d-print-none">
+        <nav class="navbar navbar-expand navbar-dark bg-primary sticky-top d-print-none px-3">
             {% block navbarContent %}
                 <a class="navbar-brand d-none d-sm-inline" href="{{ asset('') }}" title="{{ trans('homepage') }}">
                     <img src="{{ asset('Dinamic/Assets/Images/logo-white.png') }}" width="30" height="30"
