--- a/Core/View/Master/PanelControllerLeftBottom.html.twig
+++ b/Core/View/Master/PanelControllerLeftBottom.html.twig
@@ -48,7 +48,7 @@
                                  <i class="{{ view.icon }} fa-fw me-1 d-none d-xl-inline-block"
                                     aria-hidden="true"></i>{{ view.title }}
                                  {% if view.count >= 1 and viewName != firstView.getViewName() %}
-                                     <span class='badge badge-secondary mt-lg-1 mb-lg-1 float-lg-right'>{{ view.count }}</span>
+                                     <span class='badge bg-secondary mt-lg-1 mb-lg-1 float-lg-right'>{{ view.count }}</span>
                                  {% endif %}
                              </a>
                         {% endfor %}
