--- a/Core/View/Tab/RoleAccess.html.twig
+++ b/Core/View/Tab/RoleAccess.html.twig
@@ -87,7 +87,7 @@
                         <td>
                             {{ rule.menu }}
                             {% if 'List' in pageName %}
-                                <span class="badge badge-info ms-1">{{ i18n.trans('list') }}</span>
+                                <span class="badge bg-info ms-1">{{ i18n.trans('list') }}</span>
                             {% endif %}
                         </td>
                         <td class="text-center">
