--- a/Core/View/Tab/DocFiles.html.twig
+++ b/Core/View/Tab/DocFiles.html.twig
@@ -44,7 +44,7 @@
                                                         aria-expanded="false">
                                                     <i class="fas fa-trash-alt"></i>
                                                 </button>
-                                                <div class="dropdown-menu dropdown-menu-right">
+                                                <div class="dropdown-menu dropdown-menu-end">
                                                     <button type="submit" name="action" value="delete-file"
                                                             class="dropdown-item" href="#">
                                                         <i class="far fa-trash-alt fa-fw"></i> {{ trans('delete-file') }}
