--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -69,7 +69,7 @@
                                 aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-check-square fa-fw"></i> {{ i18n.trans('selected-quantity') }}
                         </button>
-                        <div class="dropdown-menu dropdown-menu-right">
+                        <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href="#" onClick="return selectNone();">
                                 <i class="far fa-square fa-fw"></i> {{ i18n.trans('select-none') }}
                             </a>
