--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -75,9 +75,9 @@
                         {% endfor %}
                     </ul>
                     <ul class="navbar-nav flex-row ms-auto">
-                        <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
+                        <li class="nav-item"
                             title="{{ trans('search') }}">
-                            <a class="nav-link" href="MegaSearch">
+                            <a class="nav-link{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}" href="MegaSearch">
                                 <i class="fas fa-search" aria-hidden="true"></i>
                             </a>
                         </li>
@@ -91,7 +91,7 @@
                                aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                             </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="user-list">
                                 <a class="dropdown-item" href="{{ fsc.user.url() }}">
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
                                 </a>
